Walkthroughs need major work - added god mode - played with restrictions on machine

--- a/game/dialog.yml
+++ b/game/dialog.yml
@@ -46,6 +46,7 @@
               actoin: next
         -
           prompt: THE KID is our neighborhood mad scientist. He lives EAST of town in his LAB.'
+          questlog: { questID: main, id: kid }
           options:
             -
               text: You don't happen to have a MAP do you?
